syntax = "proto3";
package admin.admin;

option java_multiple_files = false;
option java_package = "com.example.proto.admin.admin";
option java_outer_classname = "Admin";

message A {
    string name = 1;
}

service SayNameService {
    rpc SayHello (A) returns (A);
}